update best guess to use light and cross ref