@@ -3,43 +3,58 @@ package org.uniprot.api.uniparc.common.service;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.stereotype.Service;
 import org.uniprot.api.uniparc.common.service.exception.BestGuessAnalyserException;
-import org.uniprot.api.uniparc.common.service.filter.UniParcCrossReferenceTaxonomyFilter;
 import org.uniprot.api.uniparc.common.service.filter.UniParcDatabaseFilter;
-import org.uniprot.api.uniparc.common.service.filter.UniParcDatabaseStatusFilter;
+import org.uniprot.api.uniparc.common.service.light.UniParcCrossReferenceService;
+import org.uniprot.api.uniparc.common.service.light.UniParcLightQueryService;
 import org.uniprot.api.uniparc.common.service.request.UniParcBestGuessRequest;
+import org.uniprot.api.uniparc.common.service.request.UniParcStreamRequest;
 import org.uniprot.core.uniparc.UniParcCrossReference;
 import org.uniprot.core.uniparc.UniParcDatabase;
 import org.uniprot.core.uniparc.UniParcEntry;
-import org.uniprot.store.config.searchfield.common.SearchFieldConfig;
-import org.uniprot.store.search.SolrQueryUtil;
+import org.uniprot.core.uniparc.UniParcEntryLight;
+import org.uniprot.core.uniparc.impl.UniParcEntryBuilder;
 
-
-class BestGuessAnalyser {
+@Service
+public class UniParcBestGuessService {
 
     private static final String MORE_THAN_ONE_BEST_GUESS_FOUND =
             "More than one Best Guess found {list}. Review your query and/or contact us.";
-    private final UniParcCrossReferenceTaxonomyFilter taxonomyFilter;
-    private final UniParcDatabaseFilter databaseFilter;
-    private final UniParcDatabaseStatusFilter statusFilter;
-    private final SearchFieldConfig searchFieldConfig;
+    private final UniParcLightQueryService uniParcLightQueryService;
+    private final UniParcCrossReferenceService uniParcCrossReferenceService;
+    private UniParcDatabaseFilter databaseFilter; // TODO remove
 
-    public BestGuessAnalyser(SearchFieldConfig searchFieldConfig) {
-        this.taxonomyFilter = new UniParcCrossReferenceTaxonomyFilter();
+    @Value("${voldemort.cross.reference.batchSize}")
+    private Integer crossRefStoreBatch;
+
+    @Autowired
+    public UniParcBestGuessService(
+            UniParcLightQueryService uniParcLightQueryService,
+            UniParcCrossReferenceService uniParcCrossReferenceService) {
+        this.uniParcLightQueryService = uniParcLightQueryService;
+        this.uniParcCrossReferenceService = uniParcCrossReferenceService;
         this.databaseFilter = new UniParcDatabaseFilter();
-        this.statusFilter = new UniParcDatabaseStatusFilter();
-        this.searchFieldConfig = searchFieldConfig;
     }
 
-    UniParcEntry analyseBestGuess(
-            Stream<UniParcEntry> queryResult, UniParcBestGuessRequest request) {
+    public UniParcEntry getUniParcBestGuess(UniParcBestGuessRequest request) {
+        UniParcStreamRequest streamRequest = new UniParcStreamRequest();
+        streamRequest.setQuery(request.getQuery());
+        streamRequest.setFields(request.getFields());
+        Stream<UniParcEntryLight> streamResult =
+                this.uniParcLightQueryService.stream(streamRequest);
+        return analyseBestGuess(streamResult, request);
+    }
+
+    private UniParcEntry analyseBestGuess(
+            Stream<UniParcEntryLight> queryResult, UniParcBestGuessRequest request) {
         // First Search for DatabaseType.SWISSPROT or DatabaseType.SWISSPROT_VARSPLIC (isoforms)
         List<UniParcEntry> resultList = getFilteredUniParcEntries(queryResult, request);
-
         UniParcEntry bestGuess =
                 getBestGuessUniParcEntry(
                         resultList, UniParcDatabase.SWISSPROT, UniParcDatabase.SWISSPROT_VARSPLIC);
@@ -51,27 +66,41 @@ class BestGuessAnalyser {
     }
 
     private List<UniParcEntry> getFilteredUniParcEntries(
-            Stream<UniParcEntry> entries, UniParcBestGuessRequest request) {
+            Stream<UniParcEntryLight> lightEntriesStream, UniParcBestGuessRequest request) {
         List<String> databases = new ArrayList<>();
         databases.add(UniParcDatabase.SWISSPROT.getDisplayName().toLowerCase());
         databases.add(UniParcDatabase.SWISSPROT_VARSPLIC.getDisplayName().toLowerCase());
         databases.add(UniParcDatabase.TREMBL.getDisplayName().toLowerCase());
-
-        List<String> toxonomyIds = getBestGuessTaxonomyFilters(request);
-
-        return entries.filter(Objects::nonNull)
-                .map(uniParcEntry -> this.databaseFilter.apply(uniParcEntry, databases))
-                .map(uniParcEntry -> this.taxonomyFilter.apply(uniParcEntry, toxonomyIds))
-                .map(uniParcEntry -> this.statusFilter.apply(uniParcEntry, true))
-                .collect(Collectors.toList());
+        List<String> taxonomyIds = uniParcCrossReferenceService.csvToList(request.getTaxonIds());
+        return lightEntriesStream
+                .map(lightEntry -> convertToUniParcEntry(lightEntry, databases, taxonomyIds))
+                .toList();
     }
 
-    private List<String> getBestGuessTaxonomyFilters(UniParcBestGuessRequest request) {
-        String taxFieldName =
-                searchFieldConfig.getSearchFieldItemByName("taxonomy_id").getFieldName();
-        return SolrQueryUtil.getTermValues(request.getQuery(), taxFieldName);
+    private UniParcEntry convertToUniParcEntry(
+            UniParcEntryLight uniParcEntryLight, List<String> databases, List<String> taxonomyIds) {
+        List<String> xrefIds = uniParcEntryLight.getUniParcCrossReferences();
+        List<UniParcCrossReference> filteredCrossReferences = new ArrayList<>();
+        Stream<UniParcCrossReference> batchStream =
+                uniParcCrossReferenceService.getCrossReferences(xrefIds);
+        batchStream
+                .filter(xref -> filterCrossReference(xref, databases, taxonomyIds))
+                .forEach(filteredCrossReferences::add);
+        // convert into full uniparc entry
+        UniParcEntryBuilder builder = new UniParcEntryBuilder();
+        builder.uniParcId(uniParcEntryLight.getUniParcId())
+                .sequence(uniParcEntryLight.getSequence());
+        builder.sequenceFeaturesSet(uniParcEntryLight.getSequenceFeatures());
+        builder.uniParcCrossReferencesSet(filteredCrossReferences);
+        return builder.build();
     }
 
+    private boolean filterCrossReference(
+            UniParcCrossReference xref, List<String> databases, List<String> taxonomyIds) {
+        return uniParcCrossReferenceService.filterByDatabases(xref, databases)
+                && uniParcCrossReferenceService.filterByTaxonomyIds(xref, taxonomyIds)
+                && uniParcCrossReferenceService.filterByStatus(xref, true);
+    }
 
     private UniParcEntry getBestGuessUniParcEntry(
             List<UniParcEntry> filteredEntries, UniParcDatabase... databaseTypes) {
@@ -122,7 +151,6 @@ class BestGuessAnalyser {
         return bestGuess;
     }
 
-
     private String getMoreThanOneBestGuessErrorMessage(List<UniParcEntry> maxLengthBestGuessList) {
         StringBuilder crossReferenceList = new StringBuilder("{");
         for (UniParcEntry entry : maxLengthBestGuessList) {
@@ -149,6 +177,6 @@ class BestGuessAnalyser {
                                                                 && crossReference
                                                                         .getDatabase()
                                                                         .equals(databaseType)))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
